// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drag item component should be 3rd item 1`] = `
<li
  data-field={3}
  draggable="true"
/>
`;

exports[`Drag item component should be 5th item 1`] = `
<li
  data-field={5}
  draggable="true"
/>
`;
